--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-environment-visitor": "^7.16.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,7 +19,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
-    "typescript": "^4.1.2",
+    "t": "^0.5.1",
+    "typescript": "^4.5.5",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
