--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.1.2",
     "t": "^0.5.1",
     "typescript": "^4.5.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
