--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-form": "^8.3.3",
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
     "t": "^0.5.1",
     "typescript": "^4.5.5",
